28. use DKIMDOMAIN only if Return-Path, From, Sender header are empty
- 26/06/2019
29. dkimsign.cpp - use X-Bounced-Address domain for DKIM signing for bounces
- 09/04/2020
30. check for null domain after DKIMDOMAIN replacement
- 10/04/2020
31. fixed BUG with domain assignment
- 11/04/2020
32. renamed DKKIMDOMAIN to BOUNCEDOMAIN
- 06/10/2020
33. configure.ac: changes for FreeBSD, Darwin

*
----------------------
1.0.21 
----------------------
  o updated verifier to latest draft of DKIM ADSP
  o fixed some error codes overlapping success codes
  o added signature and identity domain information to 
    DKIMVerifyDetails structure

-------------------
1.0.20 Aug 26, 2008
-------------------
  o verifier by default requires all From headers in the
    message to be signed

-------------------
1.0.19 May 12, 2008
-------------------
  o fix to trailing lines of whitespace not being ignored
    with relaxed body canonicalization

----------------------
1.0.18 January 9, 2008
----------------------
  o fix to incorrect body hashes for empty bodies
  o fix to verification error for signatures with whitespace
    around the b= value
  o more fixes to verification errors with whitespace between
    the header name and :

-----------------------
1.0.17 October 29, 2007
-----------------------
  o verifier fully supports g= value wildcard matching
  o fix to verifier not canonicalizing message headers that
    had whitespace between the header name and :
  o fix to verifier not validating t= value or comparing it
    to the x= value
  o fix to verifier accepting blank values for l= and x=

----------------------
1.0.16 August 22, 2007
----------------------
  o supports SSP (Sender Signing Practices) draft 00
  o added verifier option to save canonicalized message data

-------------------
1.0.15 May 30, 2007
-------------------
  o fix to DKIM_FAIL being returned for messages with
    invalid signatures

---------------------
1.0.14 April 24, 2007
---------------------