@@ -3,7 +3,6 @@
 # $Id: indimail-mta.spec.in,v 1.266 2020-10-11 15:38:44+05:30 Cprogrammer Exp mbhangui $
 %undefine _missing_build_ids_terminate_build
 %global _unpackaged_files_terminate_build 1
-%global debug_package %{nil}
 
 %if %{defined _project}
 # define if building on openSUSE build service
@@ -12,6 +11,10 @@
 %define _project           local
 %global build_on_obs       0
 %global _hardened_build    1
+%endif
+
+%if %{defined nodebug}
+%global debug_package      %{nil}
 %endif
 
 %global qmaildir           @qmaildir@
@@ -410,10 +413,12 @@ if [ -d %{name}-%{version} ] ; then
     %{__rm} -f /tmp/conf-groups
   fi
   %{name}-%{version}/catChangeLog %{name}-%{version}/doc/ChangeLog > ChangeLog-indimail-mta
-  if [ -n "%{debug_package}" ] ; then
-    echo %{__cc} -g %{optflags} -Wall -O2 -Wimplicit -fPIC -fno-strict-aliasing -Wunused -Wcomment -Wchar-subscripts -Wuninitialized -Wshadow -Wcast-align -Wwrite-strings -Wno-discarded-qualifiers -I/usr/include/qmail > %{name}-%{version}/conf-cc
+  echo %{__cc} -g %{optflags} -Wall -O2 -Wimplicit -fPIC -fno-strict-aliasing -Wunused -Wcomment -Wchar-subscripts -Wuninitialized -Wshadow -Wcast-align -Wwrite-strings -Wno-discarded-qualifiers -I/usr/include/qmail > %{name}-%{version}/conf-cc
+  %if %{defined nodebug}
+    echo %{__cc} -s -rdynamic > %{name}-%{version}/conf-ld
+  %else
     echo %{__cc} -rdynamic > %{name}-%{version}/conf-ld
-  fi
+  %endif
 fi
 #### ucspi-tcp ######################
 if [ -d ucspi-tcp-%{ucspitcp_version} ] ; then
@@ -425,10 +430,12 @@ if [ -d ucspi-tcp-%{ucspitcp_version} ] ; then
   %else
     %{__rm} -f ucspi-tcp-%{ucspitcp_version}/conf-dlopen
   %endif
-  if [ -n "%{debug_package}" ] ; then
-    echo %{__cc} -g -Wall -Wshadow -fPIC %{optflags} -fno-strict-aliasing -I/usr/include/qmail > ucspi-tcp-%{ucspitcp_version}/conf-cc
+  echo %{__cc} -g -Wall -Wshadow -fPIC %{optflags} -fno-strict-aliasing -I/usr/include/qmail > ucspi-tcp-%{ucspitcp_version}/conf-cc
+  %if %{defined nodebug}
+    echo %{__cc} -s -O2 > ucspi-tcp-%{ucspitcp_version}/conf-ld
+  %else
     echo %{__cc} -O2 > ucspi-tcp-%{ucspitcp_version}/conf-ld
-  fi
+  %endif
 fi
 
 %install
