@@ -3,7 +3,6 @@
 # $Id: indimail-mta.spec.in,v 1.247 2020-08-03 17:30:46+05:30 Cprogrammer Exp mbhangui $
 %undefine _missing_build_ids_terminate_build
 %global _unpackaged_files_terminate_build 1
-%global debug_package %{nil}
 
 %if %{defined _project}
 # define if building on openSUSE build service
@@ -14,6 +13,10 @@
 %global build_on_obs       0
 %global reconfigure_mode   0
 %global _hardened_build    1
+%endif
+
+%if %{defined nodebug}
+%global debug_package      %{nil}
 %endif
 
 %global _prefix            /usr
@@ -125,7 +128,11 @@ of the SPF/SRS protocol pair.
 %endif
 %endif
 %{__make} -s %{?_smp_mflags} CC="%{__cc}" CFLAGS="$CFLAGS" LDFLAGS="$LDFLAGS"
-%{__make} -s %{?_smp_mflags} DESTDIR=%{buildroot} install-strip
+%if %{defined nodebug}
+  %{__make} -s %{?_smp_mflags} DESTDIR=%{buildroot} install-strip
+%else
+  %{__make} -s %{?_smp_mflags} DESTDIR=%{buildroot} install
+%endif
 %{__rm} -f %{buildroot}%{_libdir}/libsrs2.la
 
 %files
