@@ -114,7 +114,7 @@ creation
 70. svctool: remove indimail, indimail-mta users from HiddenUsersList for
     Darwin
 71. Makefile: run instcheck to set permissions on make install.
--06/10/2020
+- 06/10/2020
 72. indimail-mta: Makefile: replaced g++ with c++ for portability
 73. indimail-mta, ucspi-tcp: fixed uninstall target
 74. installer.c: fixed setting of symbolic links
@@ -122,7 +122,7 @@ creation
 76. svctool (freebsd): remove svscan config/rc file with --config=rm-boot
 77. qmail-local.c: fixed bug with loopcounter in qmail-local.c - initialized
     maxdeliveredto
--08/10/2020
+- 08/10/2020
 78. svscan, supervise, svc, svstat, svok - use /run or /var/run on systems that support it
 79. Makefile: added run_init.o object for svc, svstat, svok
 80. Makefile: use conf-runfs to configure daemontools to use /run, /var/run
@@ -130,9 +130,11 @@ creation
 -09/10/2020
 82. qlocal_upgrade.sh: migrate /service to libexecdir
 83. svscan.c, qmailctl, svscan_rc - renamed svscan.pid to .svscan.pid
--10/10/2020
+- 10/10/2020
 84. smtpd.c: auth functions made static
 85. qmail-remote.c: digest_md5() renamed to qr_digest_md5() to avoid clash
 86. removed functions duplicated in libqmail
--11/10/2020
+- 11/10/2020
 87. added man page for docker-entrypoint
+- 12/10/2020
+88. added debuginfo package
