@@ -1,6 +1,8 @@
 * ChangeLog
 Release 1.0.18 Start 05/06/2004
 - 05/06/2004
-1.  First Release
+01. First Release
 - 01/10/2020
-2.  FreeBSD, Darwin Port
+02. FreeBSD, Darwin Port
+- 13/10/2020
+03. added debuginfo package
